--- a/NewCryptoParser/NewCryptoParser.csproj
+++ b/NewCryptoParser/NewCryptoParser.csproj
@@ -9,8 +9,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Parsers\Counter-strike  Global Offensive 2023.03.02 - 15.22.10.06.DVR.cs" />
-    <Compile Remove="Parsers\Disabled\ParserWorker.cs" />
     <Compile Remove="Parsers\ParserWorker.cs" />
   </ItemGroup>
 
@@ -31,7 +29,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Parsers\Disabled\" />
+    <Folder Include="Parsers\" />
   </ItemGroup>
 
 </Project>
