Configuring Nlog. Added some info to log about parsers. Fixed invoke NewCryptocurrencyProjectManagerService.AddNewProjects() with empty list

--- a/NewCryptoParser/nlog.config
+++ b/NewCryptoParser/nlog.config
@@ -20,6 +20,7 @@
     <target xsi:type="File" name="ownFile-web" fileName="c:\temp\nlog-AspNetCore-own-${shortdate}.log"
             layout="${longdate}|${event-properties:item=EventId:whenEmpty=0}|${level:uppercase=true}|${logger}|${message} ${exception:format=tostring}|url: ${aspnet-request-url}|action: ${aspnet-mvc-action}|${callsite}" />
 
+	  <target xsi:type="Console" name="ParserLog" layout="${longdate}|${event-properties:item=EventId:whenEmpty=0}|${level:uppercase=true}|${logger}|${message} ${exception:format=tostring}" />
     <!--Console Target for hosting lifetime messages to improve Docker / Visual Studio startup detection -->
     <target xsi:type="Console" name="lifetimeConsole" layout="${MicrosoftConsoleLayout}" />
   </targets>
@@ -35,7 +36,7 @@
     <!--Skip non-critical Microsoft logs and so log only own logs (BlackHole) -->
     <logger name="Microsoft.*" maxlevel="Info" final="true" />
     <logger name="System.Net.Http.*" maxlevel="Info" final="true" />
-    
+	<logger name ="NewCryptoParser.Services.ParserManagerService" minlevel="Info" final="true" writeTo="ParserLog"/>
     <logger name="*" minlevel="Trace" writeTo="ownFile-web" />
   </rules>
 </nlog>
