--- a/NewCryptoParser/NewCryptoParser.csproj
+++ b/NewCryptoParser/NewCryptoParser.csproj
@@ -18,7 +18,7 @@
 
   <ItemGroup>
     <None Include="nlog.config">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
@@ -36,6 +36,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ParserSDK\CryptoParserSdk.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Parsers\" />
   </ItemGroup>
 
 </Project>
